buildscript {
	repositories {
		mavenCentral()
	}
}

subprojects {

	apply plugin: 'java'
	apply plugin: 'idea'

	version = '0.0.1-SNAPSHOT'
	sourceCompatibility = '1.8'
	targetCompatibility = '1.8'

	repositories {
		mavenCentral()
	}

	compileJava {
		options.encoding = "UTF-8"
	}

	test {
		useJUnitPlatform()
	}

}